<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tips_tv_select_order_id" />

        <EditText
            android:id="@+id/txtOrderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSelectByOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tips_btn_select_order_id" />
        <!--
                <Button
                    android:id="@+id/btnSelectByOrderState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tips_btn_select_order_state" />
        -->
        <Button
            android:id="@+id/btnSelectByOrderTop10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tips_btn_get_order_top10" />
    </LinearLayout>
    <!-- 结果单屏显示，全部放在这里 -->
    <!-- Activity之间不再跳转 -->
    <LinearLayout
        android:id="@+id/clientArea"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>
